--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ reqwest = { version = "0.11", features = ["blocking","json"]}
 chrono = "0.4"
 walkdir = "2.3.2"
 tempfile = "3.3.0"
+clokwerk = "0.4.0-rc1"
